2006-04-05  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c (xglInitExtensions): Fix glWindowPos3f
	proc address lookup.

	* hw/xgl/glx/xglx.c: Add xglxPointerProc and
	xglxChangePointerControl so that acceleration and threshold
	can be set properly.

2006-04-04  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglxorg.c (xglxInitXorg): No need to try and disable
	dpms and screensaver with command line arguments as we now
	do that as part of detecting DPMS support in xglx.c.

	* hw/xgl/glx/xglx.c (xglxOsVendorInit): Check for DPMS,
	get default timeouts, disable current timeouts and screensaver.
	Add xglxDPMSSupported and xglxDPMSet for DPMS support.

	* hw/xgl/Makefile.am (Xgl_SOURCES): Remove dpmsstubs.c.

	* hw/xgl/egl/module/xeglmodule.c:
	* hw/xgl/egl/xegl.c:
	* hw/xgl/glx/module/xglxmodule.c:
	* hw/xgl/glx/xglx.c:
	* hw/xgl/xglinit.c: DPMS support by adding DPMSSupported
	and DPMSSet as ddx module functions.

	* hw/xgl/glx/xglx.c (xglxScreenInit): Re-install colormap
	after initializing software cursor (#6489). (Tiago Vignatti)

2006-04-03  David Reveman  <davidr@novell.com>

	* hw/xgl/Makefile.am (Xgl_LDADD): Static objects before dynamic
	objects (Hanno Boeck).

2006-03-31  David Reveman  <davidr@novell.com>

	* render/render.c (ProcRenderQueryPictFormats): Do not return YUV
	formats.

2006-03-30  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c: Move XOpenDisplay and GLX initialization
	to OsVendorInit so that it is done before xgl server sockets are
	created.

2006-03-28  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/module/Makefile.am:
	* hw/xgl/xglglx.c (xglLoadGLXModules): Changed GLX module name
	from libglx to libglxext to avoid conflicts.

2006-03-21  David Reveman  <davidr@novell.com>

	* configure.ac: xglx requires xkbfile.

	* include/xgl-config.h.in: Include xkb-config.h.

	* hw/xgl/glx/xglx.c: Get default XKB options from X server.

2006-03-20  David Reveman  <davidr@novell.com>
